# mopero

./: .gitattributes  .gitignore  README.md
robot_ui/: .env.example  ROBOT_UI_AI_SETUP.md  run_app.py  server.py  start_ui.sh
robot_ui/app/: __init__.py  admin.py  routes.py
robot_ui/robot_launcher/: install_robot_stack_service.sh  start_robot_stack.sh
robot_ui/static/: script.js  style.css
robot_ui/templates/: index.html  map.html
ros2_ws/: install_udev_rules.sh  stop_robot_stack.sh
ros2_ws/arduino/motor_controller/: motor_controller.ino
ros2_ws/src/: history.md
ros2_ws/src/my_robot_ai/: package.xml  setup.cfg  setup.py
ros2_ws/src/my_robot_ai/launch/: human_following.launch.py
ros2_ws/src/my_robot_ai/my_robot_ai/: human_follower_node.py  yolo_detection_node.py
ros2_ws/src/my_robot_description/: CMakeLists.txt  package.xml
ros2_ws/src/my_robot_description/launch/: display.launch.py
ros2_ws/src/my_robot_description/meshes/: base_link.stl  camera.stl  lidar.stl  wheel.stl
ros2_ws/src/my_robot_description/urdf/: robot.urdf
ros2_ws/src/my_robot_driver/: camera.launch.py  package.xml  setup.cfg  setup.py
ros2_ws/src/my_robot_driver/launch/: camera.launch.py  robot_driver.launch.py  sonar.launch.py
ros2_ws/src/my_robot_driver/my_robot_driver/: original.py  scan_filter_node.py  sonar_bridge.py  sonar_node.py
ros2_ws/src/my_robot_nav/: CMakeLists.txt  package.xml
ros2_ws/src/my_robot_nav/config/: laser_filter.yaml  nav2_params.yaml  slam_params.yaml
ros2_ws/src/my_robot_nav/launch/: mapping.launch.py  navigation.launch.py
ros2_ws/src/my_robot_nav/maps/: my_room_map.pgm  my_room_map.yaml
ros2_ws/src/my_robot_nav/scripts/: ui_goal_bridge.py
